--- a/index.html
+++ b/index.html
@@ -345,14 +345,19 @@
                    . Feel free to edit it and use it as a base for your own API&#39;s documentation.
                 </p>
                 <!-- END level 1 content-->
+
+
+
+
                 <!-- level 1 header -->
                 <h1 id="authentication">Authentication</h1>
                 <!-- END level 1 header -->
-                <!-- right side text -->
+                <!-- content text -->
                 <blockquote>
                     <p>To authorize, use this code:</p>
                 </blockquote>
-                <!-- END right side text -->
+                <!-- END content text -->
+                <!-- right side content text -->
                 <pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
 
 <span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
@@ -369,6 +374,7 @@ curl <span class="s2">"api_endpoint_here"</span>
 
 <span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
 </code></pre>
+                <!-- END black box content  -->
                 <blockquote>
                     <p>Make sure to replace
                         <code>meowmeowmeow</code>
@@ -413,9 +419,11 @@ curl <span class="s2">"api_endpoint_here"</span>
 <span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
 <span class="kd">let</span> <span class="nx">kittens</span> <span class="o">=</span> <span class="nx">api</span><span class="p">.</span><span class="nx">kittens</span><span class="p">.</span><span class="nx">get</span><span class="p">();</span>
 </code></pre>
+                <!-- right side content text -->
                 <blockquote>
                     <p>The above command returns JSON structured like this:</p>
                 </blockquote>
+                <!-- END right side content text -->
                 <pre class="highlight json tab-json"><code><span class="p">[</span><span class="w">
   </span><span class="p">{</span><span class="w">
     </span><span class="s2">"id"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
