--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
         <!-- toc -->
         <div class="toc-wrapper">
             <img src="images/logo.png" class="logo" alt="Logo"/>
+            <!-- Language selector þarf að breyta muna data-language-name="ruby" -->
             <div class="lang-selector">
                 <a href="#" data-language-name="java">java</a>
                 <a href="#" data-language-name="shell">shell</a>
@@ -291,6 +292,7 @@
                 <input type="text" class="search" id="input-search" placeholder="Search">
             </div>
             <ul class="search-results"></ul>
+            <!-- Toc Hér þarf líka að bæta við ef bætist við -->
             <div id="toc" class="toc-list-h1">
                 <li>
                     <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
@@ -347,16 +349,16 @@
                 <!-- END level 1 content-->
 
 
-
-
                 <!-- level 1 header -->
                 <h1 id="authentication">Authentication</h1>
                 <!-- END level 1 header -->
+
                 <!-- content text -->
                 <blockquote>
                     <p>To authorize, use this code:</p>
                 </blockquote>
                 <!-- END content text -->
+
                 <!-- right side content text -->
                 <pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
 
@@ -398,12 +400,12 @@ curl <span class="s2">"api_endpoint_here"</span>
                     <code>meowmeowmeow</code>
                     with your personal API key.
                 </aside>
-                <!-- -->
+                <!-- level 1 content start left and right -->
                 <h1 id="kittens">Kittens</h1>
                 <h2 id="get-all-kittens">Get All Kittens</h2>
                 <pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
 
-<span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
+<span class="n">api</span> <span class="o">=</span> <span class="no">Kittn</span><span class="o">:::</span><span class="no">APIClient</span><span class="p">.</span><span class="nf">authorize!</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">)</span>
 <span class="n">api</span><span class="p">.</span><span class="nf">kittens</span><span class="p">.</span><span class="nf">get</span>
 </code></pre>
                 <pre class="highlight python tab-python"><code><span class="kn">import</span> <span class="nn">kittn</span>
@@ -419,14 +421,17 @@ curl <span class="s2">"api_endpoint_here"</span>
 <span class="kd">let</span> <span class="nx">api</span> <span class="o">=</span> <span class="nx">kittn</span><span class="p">.</span><span class="nx">authorize</span><span class="p">(</span><span class="s1">'meowmeowmeow'</span><span class="p">);</span>
 <span class="kd">let</span> <span class="nx">kittens</span> <span class="o">=</span> <span class="nx">api</span><span class="p">.</span><span class="nx">kittens</span><span class="p">.</span><span class="nx">get</span><span class="p">();</span>
 </code></pre>
-                <!-- right side content text -->
+                <!-- right side header content -->
                 <blockquote>
                     <p>The above command returns JSON structured like this:</p>
                 </blockquote>
-                <!-- END right side content text -->
+                <!-- END right side header content -->
+
+
+
                 <pre class="highlight json tab-json"><code><span class="p">[</span><span class="w">
   </span><span class="p">{</span><span class="w">
-    </span><span class="s2">"id"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
+    </span><span class="s2">"id"</span><span class="p">::</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
     </span><span class="s2">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Fluffums"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"breed"</span><span class="p">:</span><span class="w"> </span><span class="s2">"calico"</span><span class="p">,</span><span class="w">
     </span><span class="s2">"fluffiness"</span><span class="p">:</span><span class="w"> </span><span class="mi">6</span><span class="p">,</span><span class="w">
@@ -441,6 +446,7 @@ curl <span class="s2">"api_endpoint_here"</span>
   </span><span class="p">}</span><span class="w">
 </span><span class="p">]</span><span class="w">
 </span></code></pre>
+                <!-- END level 1 block -->
                 <p>This endpoint retrieves all kittens.</p>
                 <h3 id="http-request">HTTP Request</h3>
                 <p>
@@ -472,6 +478,7 @@ curl <span class="s2">"api_endpoint_here"</span>
                 <aside class="success">
                     Remember — a happy kitten is an authenticated kitten!
                 </aside>
+                <!-- END level 1 block left and right-->
                 <h2 id="get-a-specific-kitten">Get a Specific Kitten</h2>
                 <pre class="highlight ruby tab-ruby"><code><span class="nb">require</span> <span class="s1">'kittn'</span>
 
